Fixing overflow? for joinus divs

--- a/style.css
+++ b/style.css
@@ -119,9 +119,19 @@
     height: 250px;
 }
 
+.joinUs {
+
+    overflow: hidden;
+}
+
 .joinUsDescription {
 
     text-align: center;
+}
+
+.joinUsBottom {
+
+    overflow: hidden;
 }
 
 .joinEnsembleLink {
